--- a/myApp/www/templates/spainoptions.html
+++ b/myApp/www/templates/spainoptions.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Options">
   <ion-content>
-    <div class="list">
+    <div class="list" side-menu-content="false">
 
 <a class="item item-icon-left" href="#/app/spain">
        <i class="icon"><img class="icon-competition" ng-src="img/ligabvva.png"></i>
@@ -10,13 +10,13 @@
 
   <a class="item item-icon-left item-icon-left" href="#/app/spain">
     <i class="icon"><img class="icon-competition" ng-src="img/ligabvva.png"></i>
-    
+
 competitieprogramma
   </a>
-  
+
  <a class="item item-icon-left item-icon-left" href="#/app/spain">
     <i class="icon"><img class="icon-competition" ng-src="img/ligabvva.png"></i>
-    
+
 Spelers info
   </a>
 
