--- a/myApp/www/templates/teamfixtures.html
+++ b/myApp/www/templates/teamfixtures.html
@@ -1,11 +1,11 @@
 <ion-view>
       <ion-nav-title>
-Komende wedstrijden
+Programma
     </ion-nav-title>
   <ion-content>
     <ion-list>
            
-      <ion-item ng-repeat="team in isActive"> <p> {{team.homeTeamName}} - {{team.awayTeamName}}  {{team.date}} </p></ion-item>
+      <ion-item ng-repeat="team in isActive"> <p class="homeawayteam" > {{team.homeTeamName}} - {{team.awayTeamName}}  </p> <p class="teamdate"> {{team.date}} </p> </ion-item>
       
    </ion-list>
   </ion-content>
