--- a/myApp/www/templates/account.html
+++ b/myApp/www/templates/account.html
@@ -19,10 +19,10 @@
 	  	 <label class="item item-input">
         <input type="password" ng-model="reset.newPassword" placeholder="Nieuw wachtwoord:">
       </label>
-	  		  	<a href="#" id="geenAccount" class="button button-clear button-positive" ng-click="logout()">Uitloggen</a>
+	  		  	<button id="geenAccount" class="button button-clear button-positive" ng-click="logout()">Uitloggen</button>
 
 
-	  	<button id="wachtwoordvergeten" class="button button-clear button-assertive" ng-click="resetPassword()">Reset wachtwoord</button>
+	  	<button  id="wachtwoordvergeten" class="button button-clear button-assertive" ng-click="resetPassword()">Reset wachtwoord</button>
 
 	  	<!--<h1>Upgrade account</h1>-->
 
