--- a/myApp/www/templates/teamfixtures.html
+++ b/myApp/www/templates/teamfixtures.html
@@ -5,7 +5,8 @@ Programma
   <ion-content>
     <ion-list>
            
-      <ion-item ng-repeat="team in isActive"> <p class="homeawayteam" > {{team.homeTeamName}} - {{team.awayTeamName}}  </p> <p class="teamdate"> {{team.date}} </p> </ion-item>
+      <ion-item ng-repeat="team in isActive"> <p class="homeawayteam" > {{team.homeTeamName}} - {{team.awayTeamName}}  </p> <p class="teamdate"> {{team.result}} 
+		   </p> </ion-item>
       
    </ion-list>
   </ion-content>
