--- a/myApp/www/templates/contact.html
+++ b/myApp/www/templates/contact.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Contact">>
 
   <ion-content>
-    <div class="container">
+    <div class="contact-container">
     <hp>Sensatie Reizen – Voetbalsensatie<br>
 Telefoon: +316 53 69 51 83<br>
 Mail: info@sensatiereizen.nl<br>
@@ -9,5 +9,10 @@ Mail: info@sensatiereizen.nl<br>
 KvK nr. Breda: 56149719<br>
 IBAN: NL35 RABO 0171 9173 75<br>
 BTW NL: 851993059B01</p></div>
+  
+ 
+  	
+  	<img class="contactimg" ng-src="img/mapss.png" alt="">
+  
   </ion-content>
 </ion-view>
