--- a/myApp/www/css/style.css
+++ b/myApp/www/css/style.css
@@ -23,6 +23,15 @@ ion-item:nth-child(even) {background: #F0F0F0;}
 .homeimg {    width:100%;
    }
 
+.contactimg {width: 100%;
+    padding: 22px;}
+.contact-container {  padding: 22px;
+    background-color: #F0F0F0;
+    height: auto;
+    margin: 22px;
+    margin-bottom: 0px;
+   }
+
 .ion-ios-person:before {color: #FFCC7B;
     margin-right: 8px;}
 
