--- a/myApp/www/templates/login.html
+++ b/myApp/www/templates/login.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Login" hide-back-button="true">
+<ion-view view-title="Inloggen" hide-back-button="true">
   	<ion-content>
 	  <h4 class="pagetitles" >Log in met</h4>
 	  <button class="button button-block"ng-click="facebook()"><img class="facebooklogin" ng-src="img/facebooklogin.png" alt="">Facebook</button>
