--- a/myApp/www/templates/menu.html
+++ b/myApp/www/templates/menu.html
@@ -28,10 +28,10 @@
         </ion-item>
        
         <ion-item menu-close href="#/app/login" hide-back-button="true" ng-hide="check.email||check.facebook" class="tabs-icon-top tabs-positive">
-         <p class="ion-ios-person"> Login</p>
+         <p class="ion-ios-person"> Inloggen</p>
         </ion-item>
         <ion-item menu-close href="#/app/signup" hide-back-button="true" ng-hide="check.email||check.facebook" class="tabs-icon-top tabs-positive">
-         <p class="ion-person-add"> Signup</p>
+         <p class="ion-person-add"> Aanmelden</p>
         </ion-item>
         <ion-item menu-close href="#/app/account" hide-back-button="true" ng-show="check.email||check.facebook">
          <p class="ion-ios-person"> Account</p>
