--- a/myApp/www/templates/singup.html
+++ b/myApp/www/templates/singup.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Signup" hide-back-button="false">
+<ion-view view-title="Aanmelden" hide-back-button="false">
   	<ion-content>
   	<h4 class="pagetitles" >Maak hier uw account aan</h4>
 	    <div class="containerpages">
@@ -10,7 +10,8 @@
 	  <label class="item item-input">
         <input type="password" ng-model="newUser.password" placeholder="Wachtwoord:">
       </label>
-	  <button ng-click="signup()" class="button button-block button-positive">Signup</button>
+	  <button ng-click="signup()" class="button button-block button-positive">
+Aanmelden</button>
 	  </div>
 	</ion>
 </ion>
