--- a/myApp/www/templates/home.html
+++ b/myApp/www/templates/home.html
@@ -41,6 +41,6 @@
 </div>
 </ion-content>
 <ion-footer-bar align-title="left" class="bar-assertive">
-  <h1 class="title">Title!</h1>
+  <h1 class="title" style="text-align: center;" >Teams die voetbalsensatie aanbieden</h1>
 </ion-footer-bar>
 </ion-view>
