--- a/myApp/www/templates/home.html
+++ b/myApp/www/templates/home.html
@@ -1,8 +1,7 @@
 <ion-view  hide-back-button="true" title='Home'>
-<ion-content ng-controller="HomeCtrl" scroll="false">
+<ion-content id="pitch" ng-controller="HomeCtrl" scroll="false">
   <!-- <div class="homecontainer">
   </div> -->
-<div id="pitch">
     <div class="field left">
         <div class="penalty-area">
         </div>
@@ -38,7 +37,6 @@
     <img class="player ten"src="img/Tottenham-Hotspur-icon.png"/>
     <img class="player eleven"src="img/Valencia-icon.png"/>
   </div>
-</div>
 </ion-content>
 <ion-footer-bar align-title="left" class="bar-assertive">
   <h1 class="title" style="text-align: center;" >Teams die voetbalsensatie aanbieden</h1>
