--- a/myApp/www/templates/menu.html
+++ b/myApp/www/templates/menu.html
@@ -26,7 +26,9 @@
         <ion-item menu-close href="#/app/competities">
         <p class="ion-ios-football"> Competities</p>
         </ion-item>
-       
+        <ion-item menu-close href="#/app/ourTeams">
+        <p class="ion-ios-football">Onze Teams</p>
+        </ion-item>
         <ion-item menu-close href="#/app/login" hide-back-button="true" ng-hide="check.email||check.facebook" class="tabs-icon-top tabs-positive">
          <p class="ion-ios-person"> Inloggen</p>
         </ion-item>
