--- a/myApp/www/templates/home.html
+++ b/myApp/www/templates/home.html
@@ -1,21 +1,18 @@
-<ion-view  hide-back-button="true" title='Home'>
+<ion-view  hide-back-button="true" title='<img class="title-image" src="img/logosensatie3.jpg" />'>
 <ion-content ng-controller="HomeCtrl" scroll="false">
   <ion-slide-box does-continue="true" auto-play="true" on-slide-changed="slideChanged(index)">
          <ion-slide>
-           <h3></h3>
-             <img class="slide1" src="img/cristiano-ronaldo.jpg">
+             <img class="slide1" src="img/messi.jpg">
          </ion-slide>
          <ion-slide>
-           <h3></h3>
-             <img class="slide" src="img/Luis-suarez.jpg">
+              <img class="slide1" src="img/cristiano-ronaldo.jpg">
          </ion-slide>
          <ion-slide>
-           <h3></h3>
-             <img class="slide" src="img/Voetbalreizen-Slide-1.jpg">
+             <img class="slide1" src="img/zlatan.jpg">
          </ion-slide>
        </ion-slide-box>
 </ion-content>
 <ion-footer-bar align-title="left" class="bar-assertive">
-  <h1 class="title" style="text-align: center;" >Teams die Sensatiereizen aanbieden</h1>
+  <h1 class="title" style="text-align: center;" > &reg; WaVe Media</h1>
 </ion-footer-bar>
 </ion-view>
