--- a/myApp/www/lib/ionic/css/ionic.css
+++ b/myApp/www/lib/ionic/css/ionic.css
@@ -4138,7 +4138,7 @@ a.subdued {
     border-color: transparent;
     background: none;
     box-shadow: none;
-    color: white;
+    color: #387EF5;
     font-size: 17px; }
   .bar-stable .button.button-icon {
     border-color: transparent;
