--- a/myApp/www/templates/home.html
+++ b/myApp/www/templates/home.html
@@ -5,10 +5,14 @@
              <img class="slide1" src="img/messi.jpg">
          </ion-slide>
          <ion-slide>
-              <img class="slide1" src="img/cristiano-ronaldo.jpg">
+                <img class="slide1" src="img/diego costa.jpg">
+            
          </ion-slide>
          <ion-slide>
-             <img class="slide1" src="img/zlatan.jpg">
+             <img class="slide1" src="img/rash.jpg">
+         </ion-slide>
+         <ion-slide>
+             <img class="slide1" src="img/cristiano-ronaldo.jpg">
          </ion-slide>
        </ion-slide-box>
 </ion-content>
