--- a/myApp/www/templates/home.html
+++ b/myApp/www/templates/home.html
@@ -9,7 +9,7 @@
             
          </ion-slide>
          <ion-slide>
-             <img class="slide1" src="img/rash.jpg">
+             <img class="slide1" src="img/city.jpg">
          </ion-slide>
          <ion-slide>
              <img class="slide1" src="img/cristiano-ronaldo.jpg">
