--- a/myApp/www/css/style.css
+++ b/myApp/www/css/style.css
@@ -33,10 +33,10 @@ ion-item:nth-child(even) {background: #F0F0F0;}
     margin-bottom: 0px;
    }
 
-.ion-ios-person:before {color: #FFCC7B;
+.ion-ios-person:before {color: #0f659d;
     margin-right: 13px;}
 
-.ion-ios-gear:before {color: #FFCC7B;
+.ion-ios-gear:before {color: #0f659d;
     margin-right: 8px;}
 
 .container {padding:9px;}
@@ -56,7 +56,7 @@ button#wachtwoordvergeten {    font-size: 13px;
 .list p {font-size: 18px;
     color: #858585;}
 
-.ion-ios-telephone:before {color:#FFCC7B; margin-right: 11px;}
+.ion-ios-telephone:before {color:#0f659d; margin-right: 11px;}
 
 img.slide1 {width: 100%;}
 
@@ -70,13 +70,13 @@ img.slide1 {width: 100%;}
 .title-image{
 	  width: 22%;
     margin-top: 10px;
-
+		max-width: 22%;
 }
 .loading-container .loading{
 	background:none !important;
 }
-.ion-ios-football:before { color: #FFCC7B; margin-right: 8px;}
-.ion-home:before {color:#FFCC7B; margin-right: 8px;}
+.ion-ios-football:before { color: #0f659d; margin-right: 8px;}
+.ion-home:before {color:#0f659d; margin-right: 8px;}
 #username {margin-left: 13px;
     margin-top: 6px;
     font-size: 16px; color:white;}
