--- a/myApp/www/templates/menu.html
+++ b/myApp/www/templates/menu.html
@@ -19,8 +19,8 @@
     <p  ng-show="check.email||check.facebook"  id="username" class="ion-person">{{ check.email }} {{ check.facebook }}</p>
     </ion-header-bar>
     <ion-content>
-      <ion-list>
-        <ion-item  menu-close href="#/app/home">
+      <ion-list >
+        <ion-item  class="menuklasse" menu-close href="#/app/home">
         <p class="icon menu-icon ion-home"> Home </p>
         </ion-item>
         <ion-item menu-close href="#/app/competities">
