--- a/myApp/www/css/style.css
+++ b/myApp/www/css/style.css
@@ -67,6 +67,11 @@ img.slide1 {width: 100%; height:100%;}
   fill: #003352;
 	background:none;
 }
+
+.menuklasse{
+margin-top: 31%;
+}
+
 .title-image{
 	  width: 22%;
     margin-top: 10px;
