--- a/myApp/www/templates/menu.html
+++ b/myApp/www/templates/menu.html
@@ -44,6 +44,9 @@
          <ion-item menu-close href="#/app/contact">
          <p class="ion-ios-telephone"> Contact</p>
         </ion-item>
+          <ion-item menu-close href="#/app/contact">
+         <p class="ion-log-out"> Uitloggen</p>
+        </ion-item>
       </ion-list>
     </ion-content>
   </ion-side-menu>
