--- a/myApp/www/templates/englandoptions.html
+++ b/myApp/www/templates/englandoptions.html
@@ -7,11 +7,20 @@
 
    Ranglijst
   </a>
-
-  <a class="item item-icon-left item-icon-left" href="#/app/teamfixtures">
+  <a class="item item-icon-left item-icon-left" href="#/app/teamtimed">
     <i class="icon"><img class="icon-competition" ng-src="img/premierleague.png"></i>
 
-competitieprogramma
+Competitie Programma
+  </a>
+  <a class="item item-icon-left item-icon-left" href="#/app/teamfinished">
+    <i class="icon"><img class="icon-competition" ng-src="img/premierleague.png"></i>
+
+Gespeelde Wedstrijden
+  </a>
+  <a class="item item-icon-left item-icon-left" href="#/app/teaminplay">
+    <i class="icon"><img class="icon-competition" ng-src="img/premierleague.png"></i>
+
+Live Score
   </a>
 
  <a class="item item-icon-left item-icon-left" href="#/app/teaminfo">
