--- a/myApp/www/templates/menu.html
+++ b/myApp/www/templates/menu.html
@@ -48,6 +48,13 @@
          <p class="ion-log-out"> Uitloggen</p>
         </ion-item>
       </ion-list>
+      <div class="socialmedia">
+      	
+      	<img class="socialmediaicons" src="img/facebook.jpg" alt="">
+      	<img class="socialmediaicons" src="img/twitter.jpg" alt="">
+      	<img class="socialmediaicons" src="img/instagram.jpg" alt="">
+		  <img class="socialmediaicons" src="img/linked.jpg" alt="">
+      </div>
     </ion-content>
   </ion-side-menu>
 </ion-side-menus>
