--- a/myApp/www/templates/login.html
+++ b/myApp/www/templates/login.html
@@ -1,10 +1,14 @@
 <ion-view view-title="Inloggen" hide-back-button="true">
-  	<ion-content>
+  	<ion-content>	<img class="sensatielogopaginas" src="img/sensatielogoo.jpg" alt="">
 	  <h4 class="pagetitles" >Log in met</h4>
-	  <button class="button button-block"ng-click="facebook()"><img class="facebooklogin" ng-src="img/facebooklogin.png" alt="">Facebook</button>
+	 
 
-	   <h4 class="pagetitles" >-------------  &nbsp;&nbsp;of&nbsp;&nbsp;  -------------</h4>
+	   
 	   <div class="containerlogin">
+	    <button class="button button-block"ng-click="facebook()"><img class="facebooklogin" ng-src="img/facebooklogin.png" alt="">Facebook</button>
+	    <H4 style="     text-align: center;
+    margin-top: -6px;     color: #0F659D;
+    margin-bottom: 11px;" >OF</h4>
 	   <label class="item item-input">
         <input type="email" ng-model="user.email" placeholder="Email:">
       </label>
