--- a/myApp/www/templates/singup.html
+++ b/myApp/www/templates/singup.html
@@ -1,12 +1,13 @@
 <ion-view view-title="Aanmelden" hide-back-button="false">
   	<ion-content>
-  	<h4 class="pagetitles" >Maak hier uw account aan</h4>
+  	<img class="sensatielogopaginas" src="img/sensatielogoo.jpg" alt="">
+  	<h4 class="pagetitles" >Maak hier gratis uw account aan</h4>
 	    <div class="containerpages">
-	   <h5>Email:</h5>
+	   
 	   <label class="item item-input">
         <input type="email" ng-model="newUser.email" placeholder="Email:">
-      </label><br>
-	  <h5>Wachtwoord:</h5>
+      </label>
+	
 	  <label class="item item-input">
         <input type="password" ng-model="newUser.password" placeholder="Wachtwoord:">
       </label>
