--- a/myApp/www/templates/competities.html
+++ b/myApp/www/templates/competities.html
@@ -12,20 +12,20 @@
     Primera División
   </a>
 
-  <a class="item item-icon-left" href="#/app/italy">
+  <a class="item item-icon-left" href="#/app/italyoptions">
     <i class="icon"><img class="icon-competition" ng-src="img/seriea.png"></i>
     Serie A
   </a>
 
-  <a class="item item-icon-left" href="#/app/germany">
+  <a class="item item-icon-left" href="#/app/germanyoptions">
     <i class="icon"><img class="icon-competition" ng-src="img/bundesliga.png"></i>
     Bundesliga
   </a>
-    <a class="item item-icon-left" href="#/app/dutch">
+    <a class="item item-icon-left" href="#/app/dutchoptions">
     <i class="icon"><img class="icon-competition" ng-src="img/eredivisie.png"></i>
     Eredivisie
   </a>
-    <a class="item item-icon-left" href="#/app/france">
+    <a class="item item-icon-left" href="#/app/franceoptions">
     <i class="icon"><img class="icon-competition" ng-src="img/lique1.png"></i>
     Lique 1
   </a>
