--- a/myApp/www/templates/spainoptions.html
+++ b/myApp/www/templates/spainoptions.html
@@ -5,19 +5,29 @@
 <a class="item item-icon-left" href="#/app/spain">
        <i class="icon"><img class="icon-competition" ng-src="img/ligabvva.png"></i>
 
-   Uitslagen
+Ranglijst
   </a>
 
-  <a class="item item-icon-left item-icon-left" href="#/app/spain">
+  <a class="item item-icon-left item-icon-left" href="#/app/teamtimedspain">
     <i class="icon"><img class="icon-competition" ng-src="img/ligabvva.png"></i>
 
-competitieprogramma
+Competitieprogramma
+  </a>
+  <a class="item item-icon-left item-icon-left" href="#/app/teamfinishedspain">
+    <i class="icon"><img class="icon-competition" ng-src="img/ligabvva.png"></i>
+
+Gespeelde Wedstrijden
+  </a>
+  <a class="item item-icon-left item-icon-left" href="#/app/teaminplayspain">
+    <i class="icon"><img class="icon-competition" ng-src="img/ligabvva.png"></i>
+
+Live Score
   </a>
 
- <a class="item item-icon-left item-icon-left" href="#/app/spain">
+ <a class="item item-icon-left item-icon-left" href="#/app/teaminfospain">
     <i class="icon"><img class="icon-competition" ng-src="img/ligabvva.png"></i>
 
-Spelers info
+Marktwaarde clubs
   </a>
 
 
