--- a/myApp/www/templates/italyoptions.html
+++ b/myApp/www/templates/italyoptions.html
@@ -2,25 +2,33 @@
   <ion-content>
     <div class="list">
 <div ng-show='loader'><img ng-src="img/loading.gif" class="loader"></div>
-<a class="item item-icon-left" href="#/app/england">
+<a class="item item-icon-left" href="#/app/italy">
        <i class="icon"><img class="icon-competition" ng-src="img/seriea.png"></i>
 
    Ranglijst
   </a>
 
-  <a class="item item-icon-left item-icon-left" href="#/app/teamfixtures">
+  <a class="item item-icon-left item-icon-left" href="#/app/teamtimeditaly">
     <i class="icon"><img class="icon-competition" ng-src="img/seriea.png"></i>
 
-competitieprogramma
+Competitie Programma
+  </a>
+  <a class="item item-icon-left item-icon-left" href="#/app/teamfinisheditaly">
+    <i class="icon"><img class="icon-competition" ng-src="img/seriea.png"></i>
+
+Gespeelde Wedstrijden
+  </a>
+  <a class="item item-icon-left item-icon-left" href="#/app/teaminplayitaly">
+    <i class="icon"><img class="icon-competition" ng-src="img/seriea.png"></i>
+
+Live Score
   </a>
 
- <a class="item item-icon-left item-icon-left" href="#/app/teaminfo">
+  <a class="item item-icon-left item-icon-left" href="#/app/teaminfoitaly">
     <i class="icon"><img class="icon-competition" ng-src="img/seriea.png"></i>
 
 Marktwaarde clubs
   </a>
-
-
 </div>
   </ion-content>
 </ion-view>
